# alvr_render

./: .editorconfig  CMakeLists.txt
src/: EncodePipeline.cpp  EncodePipeline.h  EncodePipelineNvEnc.cpp  EncodePipelineSW.cpp  EncodePipelineSW.h  EncodePipelineVAAPI.cpp  Encoder.cpp  Encoder.hpp  EventManager.hpp  FormatConverter.cpp  FormatConverter.h  FrameRender.cpp  FrameRender.h  MEncoder.cpp  MEncoder.h  Renderer.cpp  Renderer.h  Renderer.hpp  VkContext.hpp  alvr_binding.h  ffmpeg_helper.cpp  ffmpeg_helper.h  interface.h  monado_interface.h  packet_types.h  utils.hpp
src/alvr_server/: IDRScheduler.cpp  Logger.cpp  Logger.h  NalParsing.cpp  Settings.cpp  Settings.h
